# delta_analysis

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  vcpkg.json
benchmarks/: CMakeLists.txt  benchmark_core.cpp
dev/: DEV_MANUAL.md  _backlog.txt  _chaotic_dev_log.txt  _chaotic_dev_log_computational_math.txt  dev_notes.txt
docs/: _architecture.md  _optimal_coding_guideline.md  benchmark_results.md  optimal_coding_guideline.md  roadmap.md  test_coverage.md  transcendental_functions_rationale.md  user_manual.md
docs/API, Architecture, Rationale/: _delta_rational_documentation.md  architecture.md  transcendental_functions_rationale.md
include/: documentation.h
include/delta/: delta_rational_survival_guidebook.txt
include/delta/calculus/: continuity.h  differentiability.h  modulus.h  riemann_sum.h
include/delta/core/: API_DELTA_RATIONAL.md  _delta_rational_documentation.md  adaptive_delta_path.h  completion.h  delta_operator.h  delta_path.h  delta_strategy.h  eigen_integration.h  grid.h  grid_concept.h  grid_refine.h  interval_info.h  list_grid.h  operational_function.h  path_concept.h  product_grid.h  product_path.h  rational.h  rational_deprecated.h  rational_h_Optimization_Draft.txt  regulative_idea.h  tree_grid.h  uniform_delta_path.h  uniform_grid.h  value_metric.h
include/delta/geometry/: SURVIVAL_GUIDEBOOK.txt  _roadmap.txt  barycentric_subdivision.h  connection.h  constructive_core.h  covariant_derivative.h  curvature.h  discrete_action.h  discrete_forms.h  dual_complex.h  geometry_ops.h  hat_basis.h  matrix_field.h  product_regulative.h  simplicial_complex.h  simplicial_path.h  tensor_field.h
include/delta/numerical/: [DELETE]comparisons.h  [DELETE]operations.h  boundary_conditions.h  cartesian_grid.h  concepts.h  convergence_tests.h  cotangent_laplacian.h  discrete_gradient_divergence.h  discrete_operators.h  fem_assemblers.h  finite_differences.h  gauge_groups.h  gauge_theory.h  gradient.h  grid_curl.h  grid_differences.h  grid_laplacian.h  grid_ops_1d.h  grid_ops_tensor_1d.h  identity_checks.h  integrals.h  integrals_1d.h  integrals_2d.h  integrals_3d.h  integrals_green.h  laplacian.h  pde_solvers.h  variational_solvers.h
include/delta/numerical/solvers/: advection_solver.h  common.h  heat_solver.h  poisson_solver.h  (+2 more)
include/delta/rational/: Tech_specification.txt  _optimal_coding_guideline.txt  _project_bible.txt  batch_arithmetic.h  comparisons.h  context.h  delta_rational_survival_guidebook.txt  eager.h  eigen_integration.h  eigen_transcendentals.h  evaluate_impl.h  evaluation.h  evaluation_core.h  expression_root.h  expression_root_factories.h  expression_root_impl.h  gauss_qi.h  gauss_qi_impl.h  gauss_qi_transcendentals.h  gc.h  global_state.h  interval.h  lazy_nodes.h  lazy_rational.h  lazy_rational_impl.h  literals.h  node_pool.h  node_types.h  operations.h  rational_class.h  rational_fwd.h  rational_impl.h  reduce.h  simplify.h  simplify_impl.h  storage.h  transcendentals.h  utils.h
tests/: test_fixtures.h  test_fixtures_geometry_numerical.h
tests/basic/: main_tests_basic.cpp  test_adaptive_operator.cpp  test_adaptive_path.cpp  test_delta_path.cpp  test_differentiability.cpp  test_grid.cpp  test_grid_concepts.cpp  test_grid_edge_cases.cpp  test_integral.cpp  test_non_commutativity.cpp  test_operational_function.cpp  test_operational_function_edge_cases.cpp  test_operators_edge_cases.cpp  test_sqrt2.cpp  test_strategies_edge_cases.cpp
tests/calculus/: main_tests_calculus.cpp  test_continuity.cpp  test_differentiability.cpp  test_modulus.cpp  test_modulus_continuity.cpp  test_rational_embedding.cpp  test_riemann_sum.cpp  test_sqrt2_construction.cpp
tests/geometry/: CMakeLists.txt  constructive_core_test.cpp  discrete_action_test.cpp  discrete_forms_test.cpp  discrete_operators_3d_4d_test.cpp  discrete_operators_test.cpp  dual_complex_test.cpp  geometry_ops_test.cpp  hat_basis_test.cpp  main_tests_geometry.cpp  matrix_field_test.cpp  product_regulative_test.cpp  simplicial_complex_test.cpp  tensor_field_test.cpp  test_connection_curvature.cpp  test_discrete_action.cpp  test_discrete_forms.cpp  test_dual_complex.cpp  test_hat_basis.cpp  test_rational_type.cpp  test_simplicial_complex_advanced.cpp  test_simplicial_path.cpp  test_tensor_field_advanced.cpp
tests/geometry/geometry_advanced/: connection_test.cpp  covariant_derivative_test.cpp  curvature_test.cpp  discrete_action_test.cpp  discrete_forms_test.cpp  dual_complex_test.cpp  hat_basis_test.cpp
tests/numerical/: CMakeLists.txt  boundary_conditions_test.cpp  cotangent_laplacian_test.cpp  gauge_groups_test.cpp  gauge_theory_test.cpp  integrals_test.cpp  test_boundary_conditions.cpp  test_cartesian_operators.cpp  test_cotangent_laplacian.cpp  test_discrete_operators.cpp  test_fem_assemblers.cpp  test_finite_differences.cpp  test_gauge_theory.cpp  test_integrals_green.cpp  test_simplicial_complex.cpp  test_tensor_arithmetic.cpp  test_tensor_field.cpp  variational_solver_tests.cpp
tests/numerical/solvers/: advection_solver_test.cpp  heat_solver_test.cpp  poisson_solver_test.cpp  wave_solver_test.cpp
tests/rational/: CMakeLists.txt  batch_test.cpp  depth_test.cpp  eager_test.cpp  eigen_integration_gauss_qi.cpp  eigen_integration_test.cpp  eigen_integration_wolfram_caliber.cpp  gc_reset_pool_edge_cases_tests.cpp  gc_test.cpp  interval_test.cpp  lazy_rational_contract_tests.cpp  lazy_rational_test_fixture.h  lazy_simplification_tests.cpp  lazy_test.cpp  performance_compare_test.cpp  performance_test.cpp  pow_test.cpp  rational_gauss_qi_test.cpp  rational_test.cpp  rational_test_2.cpp  test_utils.h  transcendentals_canonicalization_benchmark.cpp  transcendentals_comparative.cpp  transcendentals_correctness.cpp  transcendentals_correctness_2.cpp  transcendentals_test.cpp
tests/regulative_ideas/: main_tests_regulative_ideas.cpp  test_matrix.cpp  test_padic.cpp  test_tree.cpp
tests/solvers/: CMakeLists.txt  main_tests_solvers.cpp  test_advection_solver.cpp  test_heat_solver.cpp  test_poisson_solver.cpp  test_variational_solvers.cpp  test_wave_solver.cpp
